Fixed text-overflow in messages container

--- a/docs/css/styles/messages.css
+++ b/docs/css/styles/messages.css
@@ -46,6 +46,7 @@ body {
 }
 .message-text {
     margin-bottom: 0.3rem;
+    box-sizing: border-box;
 }
 .btn {
     width: 100%;
